--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,16 @@
+language: android
 android:
   components:
     - tools
     - platform-tools
     - tools
+
+  branches:
+    only:
+      - master
+
+  before_script:
+  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
+  - emulator -avd test -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
